# bubble

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/pinot/: pinot-controller.conf  schema.json  table-config.json
extract/: tweetloader.py
orchestration/: pipeline.py
